@@ -17,49 +17,77 @@ rem limitations under the License.
 rem ---------------------------------------------------------------------------
 rem NT Service Install/Uninstall script
 rem
-rem Usage: service.bat install/remove [service_name [--rename]] [--user username]
-rem
 rem Options
-rem install                 Install the service using default settings.
-rem remove                  Remove the service from the system.
+rem install                Install the service using Tomcat@VERSION_MAJOR@ as service name.
+rem                        Service is installed using default settings.
+rem remove                 Remove the service from the System.
 rem
-rem service_name (optional) The name to use for the service. If not specified,
-rem                         Tomcat@VERSION_MAJOR@ is used as the service name.
-rem
-rem --rename     (optional) Rename tomcat@VERSION_MAJOR@.exe and tomcat@VERSION_MAJOR@w.exe to match
-rem                         the non-default service name.
-rem
-rem username     (optional) The name of the OS user to use to install/remove
-rem                         the service (not the name of the OS user the
-rem                         service will run as). If not specified, the current
-rem                         user is used.
+rem name        (optional) If the second argument is present it is considered
+rem                        to be new service name
 rem ---------------------------------------------------------------------------
 
 setlocal
 
 set "SELF=%~dp0%service.bat"
-
-set DEFAULT_SERVICE_NAME=Tomcat@VERSION_MAJOR@
-set SERVICE_NAME=%DEFAULT_SERVICE_NAME%
-
+rem Guess CATALINA_HOME if not defined
 set "CURRENT_DIR=%cd%"
+if not "%CATALINA_HOME%" == "" goto gotHome
+set "CATALINA_HOME=%cd%"
+if exist "%CATALINA_HOME%\bin\tomcat@VERSION_MAJOR@.exe" goto okHome
+rem CD to the upper dir
+cd ..
+set "CATALINA_HOME=%cd%"
+:gotHome
+if exist "%CATALINA_HOME%\bin\tomcat@VERSION_MAJOR@.exe" goto okHome
+echo The tomcat@VERSION_MAJOR@.exe was not found...
+echo The CATALINA_HOME environment variable is not defined correctly.
+echo This environment variable is needed to run this program
+goto end
+:okHome
+rem Make sure prerequisite environment variables are set
+if not "%JAVA_HOME%" == "" goto gotJdkHome
+if not "%JRE_HOME%" == "" goto gotJreHome
+echo Neither the JAVA_HOME nor the JRE_HOME environment variable is defined
+echo Service will try to guess them from the registry.
+goto okJavaHome
+:gotJreHome
+if not exist "%JRE_HOME%\bin\java.exe" goto noJavaHome
+if not exist "%JRE_HOME%\bin\javaw.exe" goto noJavaHome
+goto okJavaHome
+:gotJdkHome
+if not exist "%JAVA_HOME%\jre\bin\java.exe" goto noJavaHome
+if not exist "%JAVA_HOME%\jre\bin\javaw.exe" goto noJavaHome
+if not exist "%JAVA_HOME%\bin\javac.exe" goto noJavaHome
+if not "%JRE_HOME%" == "" goto okJavaHome
+set "JRE_HOME=%JAVA_HOME%\jre"
+goto okJavaHome
+:noJavaHome
+echo The JAVA_HOME environment variable is not defined correctly
+echo This environment variable is needed to run this program
+echo NB: JAVA_HOME should point to a JDK not a JRE
+goto end
+:okJavaHome
+if not "%CATALINA_BASE%" == "" goto gotBase
+set "CATALINA_BASE=%CATALINA_HOME%"
+:gotBase
 
-rem Parse the arguments
+set "EXECUTABLE=%CATALINA_HOME%\bin\tomcat@VERSION_MAJOR@.exe"
+
+rem Set default Service name
+set SERVICE_NAME=Tomcat@VERSION_MAJOR@
+set DISPLAYNAME=Apache Tomcat @VERSION_MAJOR_MINOR@ %SERVICE_NAME%
+
 if "x%1x" == "xx" goto displayUsage
 set SERVICE_CMD=%1
 shift
-if "x%1x" == "xx" goto checkEnv
+if "x%1x" == "xx" goto checkServiceCmd
 :checkUser
 if "x%1x" == "x/userx" goto runAsUser
 if "x%1x" == "x--userx" goto runAsUser
 set SERVICE_NAME=%1
+set DISPLAYNAME=Apache Tomcat @VERSION_MAJOR_MINOR@ %1
 shift
-if "x%1x" == "xx" goto checkEnv
-if "x%1x" == "x--renamex" (
-    set RENAME=%1
-    shift
-)
-if "x%1x" == "xx" goto checkEnv
+if "x%1x" == "xx" goto checkServiceCmd
 goto checkUser
 :runAsUser
 shift
@@ -67,87 +95,16 @@ if "x%1x" == "xx" goto displayUsage
 set SERVICE_USER=%1
 shift
 runas /env /savecred /user:%SERVICE_USER% "%COMSPEC% /K \"%SELF%\" %SERVICE_CMD% %SERVICE_NAME%"
-exit /b 0
-
-rem Check the environment
-:checkEnv
-
-rem Guess CATALINA_HOME if not defined
-if not "%CATALINA_HOME%" == "" goto gotHome
-set "CATALINA_HOME=%cd%"
-if exist "%CATALINA_HOME%\bin\%DEFAULT_SERVICE_NAME%.exe" goto gotHome
-if exist "%CATALINA_HOME%\bin\%SERVICE_NAME%.exe" goto gotHome
-rem CD to the upper dir
-cd ..
-set "CATALINA_HOME=%cd%"
-:gotHome
-if exist "%CATALINA_HOME%\bin\%DEFAULT_SERVICE_NAME%.exe" (
-    set "EXECUTABLE=%CATALINA_HOME%\bin\%DEFAULT_SERVICE_NAME%.exe"
-    goto okHome
-)
-if exist "%CATALINA_HOME%\bin\%SERVICE_NAME%.exe" (
-    set "EXECUTABLE=%CATALINA_HOME%\bin\%SERVICE_NAME%.exe"
-    goto okHome
-)
-if "%DEFAULT_SERVICE_NAME%"== "%SERVICE_NAME%" (
-    echo The file %DEFAULT_SERVICE_NAME%.exe was not found...
-) else (
-    echo Neither the %DEFAULT_SERVICE_NAME%.exe file nor the %SERVICE_NAME%.exe file was found...
-)
-echo Either the CATALINA_HOME environment variable is not defined correctly or
-echo the incorrect service name has been used.
-echo Both the CATALINA_HOME environment variable and the correct service name
-echo are required to run this program.
-exit /b 1
-:okHome
-cd "%CURRENT_DIR%"
-
-rem Make sure prerequisite environment variables are set
-if not "%JRE_HOME%" == "" goto gotJreHome
-if not "%JAVA_HOME%" == "" goto gotJavaHome
-echo Neither the JAVA_HOME nor the JRE_HOME environment variable is defined
-echo Service will try to guess them from the registry.
-goto okJava
-
-:gotJavaHome
-rem No JRE given, check if JAVA_HOME is usable as JRE_HOME
-if not exist "%JAVA_HOME%\bin\java.exe" goto noJavaHomeAsJre
-rem Use JAVA_HOME as JRE_HOME
-set "JRE_HOME=%JAVA_HOME%"
-goto okJava
-
-:noJavaHomeAsJre
-echo The JAVA_HOME environment variable is not defined correctly.
-echo JAVA_HOME=%JAVA_HOME%
-echo NB: JAVA_HOME should point to a JDK not a JRE.
-exit /b 1
-
-:gotJreHome
-rem Check if we have a usable JRE
-if not exist "%JRE_HOME%\bin\java.exe" goto noJreHome
-goto okJava
-
-:noJreHome
-rem Needed at least a JRE
-echo The JRE_HOME environment variable is not defined correctly
-echo JRE_HOME=%JRE_HOME%
-echo This environment variable is needed to run this program
-exit /b 1
-
-:okJava
-if not "%CATALINA_BASE%" == "" goto gotBase
-set "CATALINA_BASE=%CATALINA_HOME%"
-
-:gotBase
-rem Process the requested command
+goto end
+:checkServiceCmd
 if /i %SERVICE_CMD% == install goto doInstall
 if /i %SERVICE_CMD% == remove goto doRemove
 if /i %SERVICE_CMD% == uninstall goto doRemove
 echo Unknown parameter "%SERVICE_CMD%"
 :displayUsage
 echo.
-echo Usage: service.bat install/remove [service_name [--rename]] [--user username]
-exit /b 1
+echo Usage: service.bat install/remove [service_name] [/user username]
+goto end
 
 :doRemove
 rem Remove the service
@@ -158,20 +115,17 @@ echo Using CATALINA_BASE:    "%CATALINA_BASE%"
     --LogPath "%CATALINA_BASE%\logs"
 if not errorlevel 1 goto removed
 echo Failed removing '%SERVICE_NAME%' service
-exit /b 1
+goto end
 :removed
 echo The service '%SERVICE_NAME%' has been removed
-if exist "%CATALINA_HOME%\bin\%SERVICE_NAME%.exe" (
-    rename "%SERVICE_NAME%.exe" "%DEFAULT_SERVICE_NAME%.exe"
-    rename "%SERVICE_NAME%w.exe" "%DEFAULT_SERVICE_NAME%w.exe"
-)
-exit /b 0
+goto end
 
 :doInstall
 rem Install the service
 echo Installing the service '%SERVICE_NAME%' ...
 echo Using CATALINA_HOME:    "%CATALINA_HOME%"
 echo Using CATALINA_BASE:    "%CATALINA_BASE%"
+echo Using JAVA_HOME:        "%JAVA_HOME%"
 echo Using JRE_HOME:         "%JRE_HOME%"
 
 rem Try to use the server jvm
@@ -192,25 +146,9 @@ if "%SERVICE_STARTUP_MODE%" == "" set SERVICE_STARTUP_MODE=manual
 if "%JvmMs%" == "" set JvmMs=128
 if "%JvmMx%" == "" set JvmMx=256
 
-if exist "%CATALINA_HOME%\bin\%DEFAULT_SERVICE_NAME%.exe" (
-    if "x%RENAME%x" == "x--renamex" (
-        rename "%DEFAULT_SERVICE_NAME%.exe" "%SERVICE_NAME%.exe"
-        rename "%DEFAULT_SERVICE_NAME%w.exe" "%SERVICE_NAME%w.exe"
-        set "EXECUTABLE=%CATALINA_HOME%\bin\%SERVICE_NAME%.exe"
-    )
-)
-
-rem Configure JAVA 9 specific start-up parameters - ensure to keep it in line with catalina.bat
-set                "JVM9_OPTIONS=--add-opens=java.base/java.lang=ALL-UNNAMED"
-set "JVM9_OPTIONS=%JVM9_OPTIONS%;--add-opens=java.base/java.io=ALL-UNNAMED"
-set "JVM9_OPTIONS=%JVM9_OPTIONS%;--add-opens=java.base/java.util=ALL-UNNAMED"
-set "JVM9_OPTIONS=%JVM9_OPTIONS%;--add-opens=java.base/java.util.concurrent=ALL-UNNAMED"
-set "JVM9_OPTIONS=%JVM9_OPTIONS%;--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED"
-set "JVM9_OPTIONS=%JVM9_OPTIONS%;--enable-native-access=ALL-UNNAMED"
-
 "%EXECUTABLE%" //IS//%SERVICE_NAME% ^
-    --Description "Apache Tomcat @VERSION@ Server - https://tomcat.apache.org/" ^
-    --DisplayName "Apache Tomcat @VERSION_MAJOR_MINOR@ %SERVICE_NAME%" ^
+    --Description "Apache Tomcat @VERSION@ Server - http://tomcat.apache.org/" ^
+    --DisplayName "%DISPLAYNAME%" ^
     --Install "%EXECUTABLE%" ^
     --LogPath "%CATALINA_BASE%\logs" ^
     --StdOutput auto ^
@@ -226,13 +164,14 @@ set "JVM9_OPTIONS=%JVM9_OPTIONS%;--enable-native-access=ALL-UNNAMED"
     --StartParams start ^
     --StopParams stop ^
     --JvmOptions "-Dcatalina.home=%CATALINA_HOME%;-Dcatalina.base=%CATALINA_BASE%;-Djava.io.tmpdir=%CATALINA_BASE%\temp;-Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager;-Djava.util.logging.config.file=%CATALINA_BASE%\conf\logging.properties;%JvmArgs%" ^
-    --JvmOptions9 "%JVM9_OPTIONS%" ^
     --Startup "%SERVICE_STARTUP_MODE%" ^
     --JvmMs "%JvmMs%" ^
     --JvmMx "%JvmMx%"
 if not errorlevel 1 goto installed
 echo Failed installing '%SERVICE_NAME%' service
-exit /b 1
+goto end
 :installed
 echo The service '%SERVICE_NAME%' has been installed.
-exit /b 0
+
+:end
+cd "%CURRENT_DIR%"
